tests/baselines/reference/symbolType9.errors.txt
tests/cases/conformance/es6/Symbols/symbolType9.ts(3,1): error TS2367: Comparison of expressions of types 'symbol' and 'boolean' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/es6/Symbols/symbolType9.ts(5,1): error TS2367: Comparison of expressions of types 'number' and 'symbol' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/es6/Symbols/symbolType9.ts(7,1): error TS2367: Comparison of expressions of types 'symbol' and 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/es6/Symbols/symbolType9.ts(9,1): error TS2367: Comparison of expressions of types 'boolean' and 'symbol' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.


==== tests/cases/conformance/es6/Symbols/symbolType9.ts (4 errors) ====
    var s = Symbol.for("equal");
    s == s;
    s == true;
    ~~~~~~~~~
!!! error TS2367: Comparison of expressions of types 'symbol' and 'boolean' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    s != s;
    0 != s;
    ~~~~~~
!!! error TS2367: Comparison of expressions of types 'number' and 'symbol' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    s === s;
    s === 1;
    ~~~~~~~
!!! error TS2367: Comparison of expressions of types 'symbol' and 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    s !== s;
    false !== s;
    ~~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types 'boolean' and 'symbol' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.